syntax = "proto3";

option go_package = "github.com/canonical/ubuntu-pro-for-windows/wslserviceapi";

package wslserviceapi;

service WSL {
    rpc ApplyProToken (ProAttachInfo) returns (Empty) {}
    rpc ProServiceEnablement(ProService) returns (Empty) {}
    rpc Ping(Empty) returns (Empty) {}
}

message ProAttachInfo {
    string token = 1;
}

message Empty {}

message ProService {
    string service = 1;
    bool enable = 2; // True to enable, false to disable
}
